# swipio-file-storage

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.production.yml  pyproject.toml  setup.cfg
file_storage/: controller.py  main.py
file_storage/controller/: __init__.py  controller.py  exceptions.py
file_storage/model/: __init__.py  database.py  model.py  types.py  utils.py
tests/: conftest.py  test_controller.py  test_main.py  test_model.py
